--- a/index.html
+++ b/index.html
@@ -2,11 +2,135 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amit Kumar Shaw | Product Leader</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Amit Kumar Shaw | Product & Growth Leader | FinTech, SaaS, AI Expert</title>
+    <meta name="title" content="Amit Kumar Shaw | Product & Growth Leader | FinTech, SaaS, AI Expert" />
+    <meta name="description" content="Seasoned Product and Growth leader with over a decade of experience in FinTech, B2B SaaS, and AI platforms. Specializing in 0-to-1 product development, GTM strategy, and scaling ventures." />
+    <meta name="keywords" content="Product Manager, Growth Leader, FinTech, SaaS, AI Products, Product Strategy, GTM Strategy, Mumbai, India, Product Development, B2B SaaS, Product-led Growth" />
+    <meta name="author" content="Amit Kumar Shaw" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://amitkumarshaw.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://amitkumarshaw.com/" />
+    <meta property="og:title" content="Amit Kumar Shaw | Product & Growth Leader | FinTech, SaaS, AI Expert" />
+    <meta property="og:description" content="Seasoned Product and Growth leader with over a decade of experience in FinTech, B2B SaaS, and AI platforms. Specializing in 0-to-1 product development, GTM strategy, and scaling ventures." />
+    <meta property="og:image" content="https://amitkumarshaw.com/og-image.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:site_name" content="Amit Kumar Shaw" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://amitkumarshaw.com/" />
+    <meta name="twitter:title" content="Amit Kumar Shaw | Product & Growth Leader | FinTech, SaaS, AI Expert" />
+    <meta name="twitter:description" content="Seasoned Product and Growth leader with over a decade of experience in FinTech, B2B SaaS, and AI platforms. Specializing in 0-to-1 product development, GTM strategy, and scaling ventures." />
+    <meta name="twitter:image" content="https://amitkumarshaw.com/og-image.svg" />
+    <meta name="twitter:creator" content="@amitkumarshaw" />
+
+    <!-- LinkedIn -->
+    <meta property="og:linkedin" content="https://www.linkedin.com/in/amit-kumar-shaw" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg" />
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://cdn.tailwindcss.com" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- Structured Data (JSON-LD) for SEO -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Amit Kumar Shaw",
+  "jobTitle": "Product & Growth Leader",
+  "description": "Seasoned Product and Growth leader with over a decade of experience in FinTech, B2B SaaS, and AI platforms",
+  "url": "https://amitkumarshaw.com",
+  "image": "https://amitkumarshaw.com/og-image.svg",
+  "sameAs": [
+    "https://www.linkedin.com/in/amit-kumar-shaw"
+  ],
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Mumbai",
+    "addressRegion": "Maharashtra",
+    "addressCountry": "India"
+  },
+  "email": "amitkumarshaw22@gmail.com",
+  "telephone": "+91-9883132444",
+  "knowsAbout": [
+    "Product Management",
+    "Growth Strategy",
+    "FinTech",
+    "B2B SaaS",
+    "AI Products",
+    "Product-led Growth",
+    "GTM Strategy",
+    "User Research",
+    "Enterprise Workflows"
+  ],
+  "alumniOf": [
+    {
+      "@type": "EducationalOrganization",
+      "name": "Indian Institute of Management Calcutta",
+      "sameAs": "https://www.iimcal.ac.in/"
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "Birla Institute of Technology, Mesra",
+      "sameAs": "https://www.bitmesra.ac.in/"
+    }
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Veefin",
+    "url": "https://veefin.com"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Amit Kumar Shaw - Personal Portfolio",
+  "url": "https://amitkumarshaw.com",
+  "description": "Professional portfolio of Amit Kumar Shaw, Product & Growth Leader specializing in FinTech, SaaS, and AI platforms",
+  "author": {
+    "@type": "Person",
+    "name": "Amit Kumar Shaw"
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://amitkumarshaw.com/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfilePage",
+  "mainEntity": {
+    "@type": "Person",
+    "name": "Amit Kumar Shaw",
+    "description": "Product & Growth Leader with expertise in FinTech, B2B SaaS, and AI platforms"
+  }
+}
+</script>
+
 <style>
   @keyframes fade-in-down {
     from {
@@ -34,9 +158,49 @@
   }
 }
 </script>
+
+    <!-- Performance Optimization -->
+    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
+    <link rel="dns-prefetch" href="https://script.google.com" />
+
+    <!-- Theme Color for Mobile Browsers -->
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- No Script Fallback -->
+    <noscript>
+      <style>
+        body {
+          font-family: Arial, sans-serif;
+          padding: 20px;
+          text-align: center;
+        }
+      </style>
+    </noscript>
 </head>
   <body class="bg-white">
+    <!-- No Script Message -->
+    <noscript>
+      <div style="padding: 40px; text-align: center; font-family: Arial, sans-serif;">
+        <h1>JavaScript Required</h1>
+        <p>This website requires JavaScript to be enabled. Please enable JavaScript in your browser settings to view this site.</p>
+      </div>
+    </noscript>
+
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+
+    <!-- Google Analytics (Optional - Add your GA4 ID) -->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+    -->
   </body>
 </html>
